work on BC->FIŘ